force-app/main/default/objects/Employee__c/fields/Balance_Leaves__c.field-meta.xml
<CustomField>
    <fullName>Balance_Leaves__c</fullName>
    <formula>Total_Leaves__c  -  Total_Leaves_Availed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Leaves</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>