force-app/main/default/objects/Employee__c/fields/Ecode__c.field-meta.xml
<CustomField>
    <fullName>Ecode__c</fullName>
    <externalId>true</externalId>
    <label>Ecode</label>
    <length>6</length>
    <type>Text</type>
</CustomField>