force-app/main/default/objects/Employee__c/fields/FNAME__c.field-meta.xml
<CustomField>
    <fullName>FNAME__c</fullName>
    <formula>User__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FNAME</label>
    <type>Text</type>
</CustomField>