force-app/main/default/objects/Employee__c/fields/States__c.field-meta.xml
<CustomField>
    <fullName>States__c</fullName>
    <label>States</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alabama (US)</fullName>
            </value>
            <value>
                <fullName>Andhra Pradesh</fullName>
            </value>
            <value>
                <fullName>Arunachal Pradesh</fullName>
            </value>
            <value>
                <fullName>Assam</fullName>
            </value>
            <value>
                <fullName>Auvergne (Fra)</fullName>
            </value>
            <value>
                <fullName>Bavaria (Ger)</fullName>
            </value>
            <value>
                <fullName>Bihar</fullName>
            </value>
            <value>
                <fullName>Birmingham (Eng)</fullName>
            </value>
            <value>
                <fullName>British Columbia (Can)</fullName>
            </value>
            <value>
                <fullName>Burgundy (Fra)</fullName>
            </value>
            <value>
                <fullName>California (US)</fullName>
            </value>
            <value>
                <fullName>Cambridge (Eng)</fullName>
            </value>
            <value>
                <fullName>Chhattisgarh</fullName>
            </value>
            <value>
                <fullName>Coventry (Eng)</fullName>
            </value>
            <value>
                <fullName>Goa</fullName>
            </value>
            <value>
                <fullName>Gujarat</fullName>
            </value>
            <value>
                <fullName>Illinois (US)</fullName>
            </value>
            <value>
                <fullName>Karnataka</fullName>
            </value>
            <value>
                <fullName>Lorraine (Fra)</fullName>
            </value>
            <value>
                <fullName>Maharashtra</fullName>
            </value>
            <value>
                <fullName>Ontario (Can)</fullName>
            </value>
            <value>
                <fullName>Quebec (Can)</fullName>
            </value>
            <value>
                <fullName>Queensland (Aus)</fullName>
            </value>
            <value>
                <fullName>Saarland (Ger)</fullName>
            </value>
            <value>
                <fullName>Tamil Nadu</fullName>
            </value>
            <value>
                <fullName>Tasmania (Aus)</fullName>
            </value>
            <value>
                <fullName>Victoria (Aus)</fullName>
            </value>
            <value>
                <fullName>West Bengal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>