force-app/main/default/objects/Employee__c/validationRules/Joining_Date_Before_Creation_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Joining_Date_Before_Creation_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Date_of_Joining__c &lt; DATEVALUE(CreatedDate)</errorConditionFormula>
    <errorDisplayField>Date_of_Joining__c</errorDisplayField>
    <errorMessage>Joining Date cannot be before creation date!!</errorMessage>
</ValidationRule>