force-app/main/default/objects/Employee__c/validationRules/Total_Leaves_cannot_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Leaves_cannot_be_negative</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Leaves__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>Total_Leaves__c</errorDisplayField>
    <errorMessage>Total Leaves cannot be negative!!</errorMessage>
</ValidationRule>