force-app/main/default/objects/Employee__c/listViews/Detail_View.listView-meta.xml
<ListView>
    <fullName>Detail_View</fullName>
    <columns>NAME</columns>
    <columns>FNAME__c</columns>
    <columns>Full_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>Detail View</label>
</ListView>